--- a/AppControleFinanceiro/AppControleFinanceiro/Resources/Styles/Colors.xaml
+++ b/AppControleFinanceiro/AppControleFinanceiro/Resources/Styles/Colors.xaml
@@ -2,8 +2,8 @@
 <?xaml-comp compile="true" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Color x:Key="Primary">#DEEF75</Color>
-    <Color x:Key="Secondary">#DFD8F7</Color>
+    <Color x:Key="Primary">RoyalBlue</Color>
+    <Color x:Key="Secondary">White</Color>
     <Color x:Key="Tertiary">#939E5A</Color>
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
