--- a/AppControleFinanceiro/AppControleFinanceiro/Views/TransactionAdd.xaml
+++ b/AppControleFinanceiro/AppControleFinanceiro/Views/TransactionAdd.xaml
@@ -8,7 +8,7 @@
         <Border
             Margin="15"
             Padding="15"
-            BackgroundColor="Black"
+            BackgroundColor="RoyalBlue"
             Stroke="Transparent"
             StrokeShape="RoundRectangle 30">
             <Grid ColumnDefinitions="*, 30" RowDefinitions="Auto">
@@ -36,15 +36,17 @@
             x:Name="LabelError"
             Margin="30,0"
             IsVisible="False"
-            TextColor="Red" />
+            TextColor="RoyalBlue" />
         <Grid Margin="30,0" ColumnDefinitions="*,*">
             <RadioButton
                 x:Name="RadioIncome"
+                TextColor="Black"
                 Content=" Receita"
                 IsChecked="True" />
             <RadioButton
                 x:Name="RadioExpense"
                 Grid.Column="1"
+                TextColor="Black"
                 Content=" Despesa"
                 HorizontalOptions="End" />
         </Grid>
@@ -52,19 +54,22 @@
         <Entry
             x:Name="EntryName"
             Margin="15,0"
+            PlaceholderColor="Black"
             Placeholder="Nome" />
 
-        <DatePicker x:Name="DatePickerDate" Margin="{OnPlatform Default='15,0',  MacCatalyst='15, 15, 15, 0'}" />
+        <DatePicker x:Name="DatePickerDate" Margin="{OnPlatform Default='15,0',  MacCatalyst='15, 15, 15, 0'}"  TextColor="Black" />
 
         <Entry
             x:Name="EntryValue"
             Margin="15,0"
+            PlaceholderColor="Black"
             Placeholder="Valor" />
 
         <Button
             Margin="15,0"
             Clicked="OnButtonClicked_Save"
             HorizontalOptions="Center"
+            TextColor="White"
             Text="Salvar" />
 
     </VerticalStackLayout>
